Add navbar donation button and homepage cards.
Co-authored-by: Saad Siddiqui <SMS-NED16@users.noreply.github.com>
Co-authored-by: Muhammad Hasham Khalid <Muhammad-Hasham-Khalid@users.noreply.github.com>

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3481,3 +3481,14 @@ img.virufy-image {
 	opacity : 0.5;
 }
 
+/* Styles for Donate button in the NavBar */
+#header button {
+	background-color: #f1f1f1;
+	box-shadow: inset 0 0 0 3px #4bae77;
+}
+
+/* Minimised navbar is navPanel */
+#navPanel button {
+	background-color: #f1f1f1;
+	box-shadow: inset 0 0 0 3px #4bae77;
+}
