--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3481,14 +3481,21 @@ img.virufy-image {
 	opacity : 0.5;
 }
 
-/* Styles for Donate button in the NavBar */
+/* Yujesh's Styles for Donate button */
 #header button {
-	background-color: #f1f1f1;
-	box-shadow: inset 0 0 0 3px #4bae77;
+    background-color: #00725e !important;
+    box-shadow: inset 0 0 0 3px #4bae77;
+    color: #95fbc2 !important;
+    font-weight: bold;
+    height: 2.75em !important;
+    line-height: 2.75em !important;
 }
 
-/* Minimised navbar is navPanel */
 #navPanel button {
-	background-color: #f1f1f1;
-	box-shadow: inset 0 0 0 3px #4bae77;
+    background-color: #00725e !important;
+    box-shadow: inset 0 0 0 3px #4bae77;
+    color: #95fbc2 !important;
+    font-weight: bold;
+    height: 2.75em !important;
+    line-height: 2.75em !important;	
 }
