--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3499,3 +3499,8 @@ img.virufy-image {
     height: 2.75em !important;
     line-height: 2.75em !important;	
 }
+
+/* Green highlight class for text/hyperlinks */
+.green-highlight {
+	color: #6cc091;
+}
