--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3324,29 +3324,36 @@ button:disabled,
 }
 
 .collab img {
-	width: 15em;
+	width: 9em;
 	margin: 0 3em;
 }
 
 /*media queries for icons sizing*/
-@media screen and (max-width: 750px) {
+@media screen and (min-width: 750px) and (max-width: 800) {
 	.collab img {
-		width: 11em;
-		margin: 0 0;
+		width: 8em;
+		margin: 0 2.5em;
 	}
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 600) and (max-width: 750px) {
 	.collab img {
-		width: 9em;
-		margin: 0;
+		width: 7em;
+		margin: 0 1.5em;
+	}
+}
+
+@media screen and (min-width: 400px) and (max-width: 600px) {
+	.collab img {
+		width: 6em;
+		margin: 0 1.2em;
 	}
 }
 
 @media screen and (max-width: 400px) {
 	.collab img {
-		width: 8em;
-		margin: 0;
+		width: 5em;
+		margin: 0 1em;
 	}
 }
 
