--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3547,11 +3547,13 @@ img.virufy-image {
 }
 
 .connect-icon {
-	margin: 0px 20px;
+	margin: 0em 0.15em;
+	vertical-align: middle;
 }
 
 #fb-icon {
 	color: #0f8ef2;
+	text-align: center;
 }
 
 #twitter-icon {
@@ -3560,4 +3562,12 @@ img.virufy-image {
 
 #linkedin-icon {
 	color: #0077b5;
+}
+
+#insta-icon {
+	background: #f09433;
+	background: -webkit-linear-gradient(45deg, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	background-clip: text; 
 }
